--- a/InfiniteScrollAnotherPattern/Interfaces/Storyboard/Main/Base.lproj/MainViewController.storyboard
+++ b/InfiniteScrollAnotherPattern/Interfaces/Storyboard/Main/Base.lproj/MainViewController.storyboard
@@ -41,6 +41,12 @@
                                     <constraint firstAttribute="height" constant="26" id="bnL-GC-YEy"/>
                                 </constraints>
                             </view>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tIY-hb-NB5">
+                                <rect key="frame" x="0.0" y="92" width="375" height="575"/>
+                                <connections>
+                                    <segue destination="EVj-m5-Wn4" kind="embed" id="m9W-xz-9l1"/>
+                                </connections>
+                            </containerView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="T6f-Vw-KF7">
                                 <rect key="frame" x="0.0" y="44" width="375" height="48"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -55,25 +61,27 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tIY-hb-NB5">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gJb-EP-CMF">
                                 <rect key="frame" x="0.0" y="92" width="375" height="575"/>
-                                <connections>
-                                    <segue destination="EVj-m5-Wn4" kind="embed" id="m9W-xz-9l1"/>
-                                </connections>
-                            </containerView>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="tIY-hb-NB5" firstAttribute="top" secondItem="4Zo-CM-gIW" secondAttribute="bottom" constant="11" id="3pQ-K3-PET"/>
                             <constraint firstItem="T6f-Vw-KF7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Is4-Gu-Efz"/>
+                            <constraint firstItem="gJb-EP-CMF" firstAttribute="top" secondItem="T6f-Vw-KF7" secondAttribute="bottom" id="Mxp-7p-daI"/>
                             <constraint firstItem="4Zo-CM-gIW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="11" id="O7C-8p-sQ6"/>
                             <constraint firstItem="tIY-hb-NB5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RFo-Pd-3xD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gJb-EP-CMF" secondAttribute="bottom" id="SZ7-Lr-YcV"/>
                             <constraint firstItem="T6f-Vw-KF7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TBp-Ky-2ON"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tIY-hb-NB5" secondAttribute="trailing" id="Ub5-P1-8GH"/>
                             <constraint firstItem="4Zo-CM-gIW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vqy-14-Ksl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tIY-hb-NB5" secondAttribute="bottom" id="Y3T-W1-xWF"/>
                             <constraint firstItem="tIY-hb-NB5" firstAttribute="top" secondItem="T6f-Vw-KF7" secondAttribute="bottom" id="YVg-Db-FNJ"/>
+                            <constraint firstItem="gJb-EP-CMF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kDg-CQ-XgU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gJb-EP-CMF" secondAttribute="trailing" id="kuG-6u-pEr"/>
                             <constraint firstItem="T6f-Vw-KF7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qcT-z2-uzr"/>
                         </constraints>
                     </view>
@@ -83,6 +91,7 @@
                         <outlet property="categoryTabCollectionView" destination="T6f-Vw-KF7" id="L50-VZ-hJA"/>
                         <outlet property="categoryTabSelectBarView" destination="4Zo-CM-gIW" id="vnh-41-PEu"/>
                         <outlet property="categoryTabSelectBarViewWidthConstraint" destination="ADo-xR-QD1" id="AFu-RE-cfi"/>
+                        <outlet property="preventHighSpeedScrollCoverView" destination="gJb-EP-CMF" id="L9s-Rv-HIJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
