--- a/InfiniteScrollAnotherPattern/Interfaces/Storyboard/Main/Base.lproj/MainViewController.storyboard
+++ b/InfiniteScrollAnotherPattern/Interfaces/Storyboard/Main/Base.lproj/MainViewController.storyboard
@@ -53,7 +53,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="vkw-qz-eON"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uWZ-Od-yft">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uWZ-Od-yft" customClass="CategoryTabCollectionViewFlowLayout" customModule="InfiniteScrollAnotherPattern" customModuleProvider="target">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
